# chlog

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md
.githooks/: pre-commit
.github/fixtures/: expected.md
.github/workflows/: ci.yml  release.yml
src/: changelog.rs  date.rs  git.rs  main.rs  utils.rs
