[package]
name = "chlog"
version = "0.2.2"
edition = "2021"
authors = ["Jeff Yang"]
description = "Universal changelog generator using conventional commit+ with monorepo support."
repository = "https://github.com/ydcjeff/chlog"
license = "MIT"
keywords = [
  "changelog-generator",
  "chlog",
  "git",
  "conventional",
  "changelog"
]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
